--- a/app/globals.css
+++ b/app/globals.css
@@ -18,17 +18,19 @@ h2 {
 }
 
 h3 {
-  @apply text-2xl md:text-3xl font-medium;
+  @apply text-xl md:text-xl font-medium;
 }
 
 @theme {
   /* Palette */
-  --color-text-light: #fff;
+  --color-text-light: #f5f5f5;
 
   --color-primary-light: #546760;
   --color-primary-main: #384742;
+  --color-primary-main-90: rgba(56, 71, 55, 0.9);
   --color-primary-dark: #293732;
 
+  --color-secondary-light: #f5f5f5;
   --color-secondary-main: #c19549;
   --color-secondary-dark: #5d4112;
 }
