--- a/app/globals.css
+++ b/app/globals.css
@@ -7,6 +7,7 @@
 
 body {
   overflow-x: hidden;
+  background-color: var(--color-secondary-light);
 }
 
 /* Typography */
@@ -33,5 +34,7 @@ h3 {
 
   --color-secondary-light: #f5f5f5;
   --color-secondary-main: #c19549;
-  --color-secondary-dark: #5d4112;
+  --color-secondary-darker: #5d4112;
+  --color-secondary-dark: #31271a;
+  --color-secondary-dark-80: rgba(49, 39, 26, 0.8);
 }
