--- a/app/globals.css
+++ b/app/globals.css
@@ -3,6 +3,7 @@
 * {
   box-sizing: border-box;
   scroll-behavior: smooth;
+  font-family: var(--font-geist-sans), sans;
 }
 
 body {
@@ -27,8 +28,6 @@ h3 {
 
 @theme {
   /* Palette */
-  --color-text-light: #f5f5f5;
-
   --color-primary-light: #546760;
   --color-primary-main: #384742;
   --color-primary-main-90: rgba(56, 71, 55, 0.9);
