--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -43,6 +43,7 @@ h3 {
   --color-primary-lighter: #535b58;
   --color-primary-main: #384742;
   --color-primary-main-90: rgba(56, 71, 55, 0.9);
+  --color-primary-main-30: rgba(56, 71, 55, 0.3);
   --color-primary-dark: #293732;
 
   --color-secondary-light: #f5f5f5;
