--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -49,6 +49,7 @@ h3 {
   --color-secondary-light: #f5f5f5;
   --color-secondary-lighter: #c19549;
   --color-secondary-main: #927752;
+  --color-secondary-main-80: rgba(146, 119, 82, 0.8);
   --color-secondary-darker: #5d4112;
   --color-secondary-dark: #31271a;
   --color-secondary-dark-80: rgba(49, 39, 26, 0.8);
