--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -20,15 +20,15 @@ body {
 
 /* Typography */
 h1 {
-  @apply text-4xl md:text-5xl font-medium;
+  @apply text-xl md:text-4xl leading-tight font-medium;
 }
 
 h2 {
-  @apply text-3xl md:text-4xl font-medium;
+  @apply text-2xl md:text-3xl leading-tight font-medium;
 }
 
 h3 {
-  @apply text-xl md:text-xl font-normal;
+  @apply text-lg md:text-xl font-normal;
 }
 
 :root {
