--- a/app/styles/content.css
+++ b/app/styles/content.css
@@ -1,13 +1,17 @@
 /* Rich text content styles */
 
-ol li[data-list="bullet"] {
+.rich-editor ol li[data-list="bullet"] {
   list-style-type: disc;
 }
 
-ol li[data-list="ordered"] {
+.rich-editor ol li[data-list="ordered"] {
   list-style-type: decimal;
 }
 
-ol {
+.rich-editor ol {
   padding-left: 20px;
+}
+
+.rich-editor a {
+  text-decoration: underline;
 }
